--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 transformers==4.50.0
-flash-attn
+flash-attn==2.7.3 # or download from https://github.com/Dao-AILab/flash-attention/releases?page=1 and choose ABI false.
 deepspeed
 accelerate
 torchcodec
